@@ -1,25 +1,30 @@
 package de.mephisto.vpin.connectors.iscored;
 
-import com.fasterxml.jackson.databind.DeserializationFeature;
-import com.fasterxml.jackson.databind.MapperFeature;
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.databind.SerializationFeature;
 import de.mephisto.vpin.connectors.iscored.models.GameModel;
 import de.mephisto.vpin.connectors.iscored.models.GameRoomModel;
 import de.mephisto.vpin.connectors.iscored.models.GameScoreModel;
-import edu.umd.cs.findbugs.annotations.NonNull;
-import edu.umd.cs.findbugs.annotations.Nullable;
 import org.apache.commons.io.IOUtils;
+import org.jspecify.annotations.NonNull;
+import org.jspecify.annotations.Nullable;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import tools.jackson.core.JsonParser;
+import tools.jackson.databind.*;
+import tools.jackson.databind.cfg.EnumFeature;
+import tools.jackson.databind.deser.std.StdDeserializer;
+import tools.jackson.databind.json.JsonMapper;
+import tools.jackson.databind.module.SimpleModule;
 
 import java.io.BufferedInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
-import java.io.OutputStream;
 import java.lang.invoke.MethodHandles;
 import java.net.*;
 import java.nio.charset.StandardCharsets;
+import java.time.Instant;
+import java.time.LocalDateTime;
+import java.time.ZoneOffset;
+import java.time.format.DateTimeFormatter;
 import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
 
@@ -29,10 +34,29 @@ public class IScored {
   private final static ObjectMapper objectMapper;
 
   static {
-    objectMapper = new ObjectMapper();
-    objectMapper.enable(SerializationFeature.INDENT_OUTPUT);
-    objectMapper.configure(MapperFeature.ACCEPT_CASE_INSENSITIVE_PROPERTIES, true);
-    objectMapper.configure(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES, false);
+    SimpleModule timeModule = new SimpleModule();
+    timeModule.addDeserializer(Instant.class, new StdDeserializer<Instant>(Instant.class) {
+      private static final DateTimeFormatter FORMATTER = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
+
+      @Override
+      public Instant deserialize(JsonParser p, DeserializationContext ctxt) {
+        String text = p.getText();
+        if (text == null || text.isBlank()) {
+          return null;
+        }
+        return LocalDateTime.parse(text, FORMATTER).toInstant(ZoneOffset.UTC);
+      }
+    });
+
+    objectMapper = JsonMapper.builder()
+        .addModule(timeModule)
+        .enable(SerializationFeature.INDENT_OUTPUT)
+        .configure(MapperFeature.ACCEPT_CASE_INSENSITIVE_PROPERTIES, true)
+        .disable(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES)
+        .disable(DeserializationFeature.FAIL_ON_NULL_FOR_PRIMITIVES)
+        .disable(EnumFeature.WRITE_ENUMS_USING_TO_STRING)
+        .disable(EnumFeature.READ_ENUMS_USING_TO_STRING)
+        .build();
   }
 
   private final static Map<String, GameRoom> cache = new ConcurrentHashMap<>();
@@ -66,7 +90,7 @@ public class IScored {
       long start = System.currentTimeMillis();
 
       // parse and align room URL 
-      URL roomurl = new URL(url);
+      URL roomurl = URI.create(url).toURL();
       String baseUrl = getBaseURL(roomurl);
       Map<String, Object> params = getBaseParams(roomurl);
 
@@ -103,11 +127,11 @@ public class IScored {
             gameRoom.getGames().add(game);
           }
 
-          Collections.sort(gameRoom.getGames(), new Comparator<IScoredGame>() {
-            @Override
-            public int compare(IScoredGame o1, IScoredGame o2) {
-              return o1.getName().compareTo(o2.getName());
-            }
+          gameRoom.getGames().sort(new Comparator<IScoredGame>() {
+              @Override
+              public int compare(IScoredGame o1, IScoredGame o2) {
+                  return o1.getName().compareTo(o2.getName());
+              }
           });
 
 
@@ -165,7 +189,7 @@ public class IScored {
         newUrl += "=" + entry.getValue();
       }
     }
-    return new URL(newUrl);
+    return URI.create(newUrl).toURL();
   }
 
   private static String loadJson(URL url) {
@@ -347,7 +371,7 @@ public class IScored {
     try {
       ByteArrayOutputStream out = new ByteArrayOutputStream();
 
-      URL roomurl = new URL(gameRoom.getUrl());
+      URL roomurl = URI.create(gameRoom.getUrl()).toURL();
       String baseUrl = getBaseURL(roomurl);
       Map<String, Object> params = getBaseParams(roomurl);
 
