@@ -1,16 +1,18 @@
 package de.mephisto.vpin.restclient;
 
-import com.fasterxml.jackson.databind.DeserializationFeature;
-import com.fasterxml.jackson.databind.SerializationFeature;
+import tools.jackson.databind.DeserializationFeature;
+import tools.jackson.databind.SerializationFeature;
+import tools.jackson.databind.cfg.EnumFeature;
+import tools.jackson.databind.json.JsonMapper; // Using JsonMapper for Jackson 3
 import de.mephisto.vpin.restclient.client.VPinStudioClient;
 import de.mephisto.vpin.restclient.client.VPinStudioClientErrorHandler;
-import org.apache.http.impl.client.HttpClientBuilder;
+import org.apache.hc.client5.http.impl.classic.HttpClientBuilder;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.http.*;
 import org.springframework.http.client.*;
 import org.springframework.http.converter.HttpMessageConverter;
-import org.springframework.http.converter.json.MappingJackson2HttpMessageConverter;
+import org.springframework.http.converter.json.JacksonJsonHttpMessageConverter;
 import org.springframework.web.client.ResourceAccessException;
 import org.springframework.web.client.RestTemplate;
 
@@ -19,7 +21,9 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.lang.invoke.MethodHandles;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
+import java.time.Duration;
 import java.util.*;
 
 /**
@@ -62,22 +66,23 @@ public class RestClient implements ClientHttpRequestInterceptor {
     List<ClientHttpRequestInterceptor> interceptors = new ArrayList<>();
     interceptors.add(this);
 
-//    SimpleClientHttpRequestFactory httpRequestFactory = new SimpleClientHttpRequestFactory();
-//    httpRequestFactory.setConnectTimeout(TIMEOUT);
-//    httpRequestFactory.setReadTimeout(TIMEOUT);
-//    restTemplate = new RestTemplate(httpRequestFactory);
     HttpComponentsClientHttpRequestFactory clientHttpRequestFactory = new HttpComponentsClientHttpRequestFactory(
         HttpClientBuilder.create().build());
+    clientHttpRequestFactory.setConnectionRequestTimeout(TIMEOUT); //implement TIMEOUT
     restTemplate = new RestTemplate(clientHttpRequestFactory);
     restTemplate.setInterceptors(interceptors);
 
+    JsonMapper mapper = JsonMapper.builder()
+        .disable(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES) // Be lenient with older servers
+        .defaultTimeZone(TimeZone.getDefault())
+        .configure(SerializationFeature.FAIL_ON_EMPTY_BEANS, false)
+        .disable(DeserializationFeature.FAIL_ON_NULL_FOR_PRIMITIVES)
+        .enable(EnumFeature.WRITE_ENUMS_USING_TO_STRING)
+        .enable(EnumFeature.READ_ENUMS_USING_TO_STRING)
+        .build();
+
     List<HttpMessageConverter<?>> messageConverters = new ArrayList<HttpMessageConverter<?>>();
-    MappingJackson2HttpMessageConverter converter = new MappingJackson2HttpMessageConverter();
-    converter.setPrettyPrint(true);
-    converter.getObjectMapper()
-        .disable(DeserializationFeature.ADJUST_DATES_TO_CONTEXT_TIME_ZONE)
-        .setTimeZone(TimeZone.getDefault())
-        .configure(SerializationFeature.FAIL_ON_EMPTY_BEANS, false);
+    JacksonJsonHttpMessageConverter converter = new JacksonJsonHttpMessageConverter(mapper);
 
     // Note: here we are making this converter to process any kind of response,
     // not only application/*json, which is the default behaviour
@@ -91,18 +96,22 @@ public class RestClient implements ClientHttpRequestInterceptor {
     interceptors.add(this);
 
     SimpleClientHttpRequestFactory httpRequestFactory = new SimpleClientHttpRequestFactory();
-    httpRequestFactory.setConnectTimeout(ms);
-    httpRequestFactory.setReadTimeout(ms);
+    httpRequestFactory.setConnectTimeout(Duration.ofMillis(ms));
+    httpRequestFactory.setReadTimeout(Duration.ofMillis(ms));
     restTemplate = new RestTemplate(httpRequestFactory);
     restTemplate.setInterceptors(interceptors);
 
+    JsonMapper mapper = JsonMapper.builder()
+        .disable(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES) // Be lenient with older servers
+        .defaultTimeZone(TimeZone.getDefault())
+        .configure(SerializationFeature.FAIL_ON_EMPTY_BEANS, false)
+        .disable(DeserializationFeature.FAIL_ON_NULL_FOR_PRIMITIVES)
+        .enable(EnumFeature.WRITE_ENUMS_USING_TO_STRING)
+        .enable(EnumFeature.READ_ENUMS_USING_TO_STRING)
+        .build();
+
     List<HttpMessageConverter<?>> messageConverters = new ArrayList<HttpMessageConverter<?>>();
-    MappingJackson2HttpMessageConverter converter = new MappingJackson2HttpMessageConverter();
-    converter.setPrettyPrint(true);
-    converter.getObjectMapper()
-        .disable(DeserializationFeature.ADJUST_DATES_TO_CONTEXT_TIME_ZONE)
-        .setTimeZone(TimeZone.getDefault())
-        .configure(SerializationFeature.FAIL_ON_EMPTY_BEANS, false);
+    JacksonJsonHttpMessageConverter converter = new JacksonJsonHttpMessageConverter(mapper);
 
     // Note: here we are making this converter to process any kind of response,
     // not only application/*json, which is the default behaviour
@@ -117,8 +126,8 @@ public class RestClient implements ClientHttpRequestInterceptor {
 
   public static RestTemplate createTimeoutBasedTemplate(int timeoutMs) {
     SimpleClientHttpRequestFactory httpRequestFactory = new SimpleClientHttpRequestFactory();
-    httpRequestFactory.setConnectTimeout(timeoutMs);
-    httpRequestFactory.setReadTimeout(timeoutMs);
+    httpRequestFactory.setConnectTimeout(Duration.ofMillis(timeoutMs));
+    httpRequestFactory.setReadTimeout(Duration.ofMillis(timeoutMs));
     return new RestTemplate(httpRequestFactory);
   }
 
@@ -238,30 +247,20 @@ public class RestClient implements ClientHttpRequestInterceptor {
   @Override
   public ClientHttpResponse intercept(HttpRequest request, byte[] body, ClientHttpRequestExecution execution) throws IOException {
     request.getHeaders().add(HttpHeaders.ACCEPT_ENCODING, "gzip, deflate, br");
-
-//    if (request.getURI().toString().contains("knowns")) {
-//      logRequest(request);
-//    }
+//    logRequest(request);
     ClientHttpResponse response = execution.execute(request, body);
-//    if (request.getURI().toString().contains("knowns")) {
-//      logResponse(response);
-//    }
+//    logResponse(response);
     return response;
   }
 
-  private static void logResponse(ClientHttpResponse response) {
-    System.out.println("--------- Response ---------------");
-    Set<Map.Entry<String, List<String>>> entries = response.getHeaders().entrySet();
-    for (Map.Entry<String, List<String>> entry : entries) {
-      System.out.println(entry.getKey() + " => " + entry.getValue());
-    }
+  private void logResponse(ClientHttpResponse response) {
+    LOG.info("--------- Response ---------------");
+    response.getHeaders().forEach((key, value) -> LOG.info(key + " => " + value));
   }
 
-  private static void logRequest(HttpRequest request) {
-    System.out.println("--------- Request ---------------");
-    for (Map.Entry<String, List<String>> entry : request.getHeaders().entrySet()) {
-      System.out.println(entry.getKey() + " => " + entry.getValue());
-    }
+  private void logRequest(HttpRequest request) {
+    LOG.info("--------- Request ---------------");
+    request.getHeaders().forEach((key, value) -> LOG.info(key + " => " + value));
   }
 
   public byte[] readBinary(String resource) {
@@ -277,7 +276,7 @@ public class RestClient implements ClientHttpRequestInterceptor {
     InputStream is = null;
     try {
       long start = System.currentTimeMillis();
-      URL url = new URL(resource);
+      URL url = URI.create(resource).toURL();
 
       HttpURLConnection con = (HttpURLConnection) url.openConnection();
       int responseCode = con.getResponseCode();
