@@ -3,8 +3,8 @@ package de.mephisto.vpin.server.discord;
 import de.mephisto.vpin.connectors.discord.*;
 import de.mephisto.vpin.restclient.PreferenceNames;
 import de.mephisto.vpin.restclient.competitions.SubscriptionInfo;
-import de.mephisto.vpin.restclient.discord.DiscordCategory;
 import de.mephisto.vpin.restclient.discord.*;
+import de.mephisto.vpin.restclient.discord.DiscordCategory;
 import de.mephisto.vpin.restclient.highscores.logging.SLOG;
 import de.mephisto.vpin.restclient.players.PlayerDomain;
 import de.mephisto.vpin.server.competitions.Competition;
@@ -15,11 +15,12 @@ import de.mephisto.vpin.server.highscores.parsing.HighscoreParsingService;
 import de.mephisto.vpin.server.players.Player;
 import de.mephisto.vpin.server.preferences.PreferenceChangedListener;
 import de.mephisto.vpin.server.preferences.PreferencesService;
-import edu.umd.cs.findbugs.annotations.NonNull;
-import edu.umd.cs.findbugs.annotations.Nullable;
+import java.time.Instant;
 import net.dv8tion.jda.api.entities.MessageEmbed;
 import net.dv8tion.jda.api.entities.channel.concrete.Category;
 import org.apache.commons.lang3.StringUtils;
+import org.jspecify.annotations.NonNull;
+import org.jspecify.annotations.Nullable;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.InitializingBean;
@@ -123,9 +124,9 @@ public class DiscordService implements InitializingBean, PreferenceChangedListen
     if (this.discordClient != null) {
       List<DiscordChannel> collect = this.discordClient.getChannels(serverId).stream().filter(c -> c.getId() == channelId).map(c -> {
         return toChannel(c);
-      }).collect(Collectors.toList());
+      }).toList();
       if (!collect.isEmpty()) {
-        return collect.get(0);
+        return collect.getFirst();
       }
     }
     return null;
@@ -425,7 +426,7 @@ public class DiscordService implements InitializingBean, PreferenceChangedListen
       }
 
       if (results.size() == 1) {
-        return toPlayer(results.get(0));
+        return toPlayer(results.getFirst());
       }
       else if (results.size() > 1) {
         Optional<DiscordMember> realPlayer = results.stream().filter(member -> !member.isBot()).findFirst();
@@ -540,8 +541,9 @@ public class DiscordService implements InitializingBean, PreferenceChangedListen
     String raw = message.getRaw();
     String scoreString = raw.substring(raw.lastIndexOf("---") + 3);
     scoreString = scoreString.replaceAll("`", "");
-    List<Score> scores = highscoreParser.parseScores(message.getCreatedAt(), scoreString, null, message.getServerId());
-    return new ScoreSummary(scores, message.getCreatedAt(), raw);
+    Instant createdAt = message.getCreatedAt() != null ? message.getCreatedAt().toInstant() : Instant.now();
+    List<Score> scores = highscoreParser.parseScores(createdAt, scoreString, null, message.getServerId());
+    return new ScoreSummary(scores, createdAt, raw);
   }
 
   public void initCompetition(long serverId, long channelId, long messageId, String topic) {
