@@ -38,7 +38,7 @@ public class VpsInstallerTest {
     List<VpsInstallLink> links = installer.getInstallLinks(url);
 
     assertEquals(3, links.size());
-    VpsInstallLink link = links.get(0);
+    VpsInstallLink link = links.getFirst();
     assertEquals("1-2-3 - Davadruix's DMD.png", link.getName());
     assertEquals("672.69KB", link.getSize());
     assertTrue(link.getUrl().startsWith("https://www.vpforums.org/index.php?app=downloads"));
@@ -72,7 +72,7 @@ public class VpsInstallerTest {
     List<VpsInstallLink> links = installer.getInstallLinks(url);
     assertEquals(2, links.size());
 
-    VpsInstallLink link = links.get(0);
+    VpsInstallLink link = links.getFirst();
     assertEquals("Vikings v1.png", link.getName());
     assertEquals("1.09 MB", link.getSize());
     assertTrue(link.getUrl().startsWith("https://vpuniverse.com/files/file/9442-vikings-static-wheel/?do=download&r=142081"));
