@@ -33,8 +33,8 @@ import de.mephisto.vpin.ui.tables.vps.VpsTableVersionCell;
 import de.mephisto.vpin.ui.util.AutoCompleteTextField;
 import de.mephisto.vpin.ui.util.AutoCompleteTextFieldChangeListener;
 import de.mephisto.vpin.ui.util.binding.BeanBinder;
-import edu.umd.cs.findbugs.annotations.NonNull;
-import edu.umd.cs.findbugs.annotations.Nullable;
+import org.jspecify.annotations.NonNull;
+import org.jspecify.annotations.Nullable;
 import javafx.application.Platform;
 import javafx.beans.binding.Bindings;
 import javafx.beans.value.ChangeListener;
@@ -53,6 +53,7 @@ import javafx.scene.layout.*;
 import javafx.stage.Stage;
 import javafx.stage.WindowEvent;
 import org.apache.commons.lang3.StringUtils;
+import org.apache.commons.lang3.Strings;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -376,7 +377,7 @@ public class TableDataController extends BasePrevNextController implements AutoC
 
           openVpsTableVersionBtn.setDisable(false);
           copyTableVersionBtn.setDisable(false);
-          fixVersionBtn.setDisable(StringUtils.equals(gameVersion.getText(), game.getExtVersion()));
+          fixVersionBtn.setDisable(Strings.CI.equals(gameVersion.getText(), game.getExtVersion()));
         }
         refreshVersionsCombo(vpsTable);
         tableVersionsCombo.setValue(version);
@@ -447,7 +448,7 @@ public class TableDataController extends BasePrevNextController implements AutoC
   private void onVpsTableVersionOpen() {
     VpsTableVersion value = this.tableVersionsCombo.getValue();
     if (value != null) {
-      VpsUrl vpsUrl = value.getUrls().get(0);
+      VpsUrl vpsUrl = value.getUrls().getFirst();
       Studio.browse(vpsUrl.getUrl());
     }
   }
@@ -1062,7 +1063,7 @@ public class TableDataController extends BasePrevNextController implements AutoC
         gameFileName.setDisable(!client.getEmulatorService().isVpxGame(game) && !client.getEmulatorService().isFpGame(game));
       }
       else {
-        gameFileName.setDisable(StringUtils.contains(game.getGameFileName(), "/") || StringUtils.contains(game.getGameFileName(), "\\") || !client.getEmulatorService().isVpxGame(game));
+        gameFileName.setDisable(Strings.CI.contains(game.getGameFileName(), "/") || Strings.CI.contains(game.getGameFileName(), "\\") || !client.getEmulatorService().isVpxGame(game));
       }
 
       boolean hasNoDetail = tableDetails == null;
@@ -1099,7 +1100,7 @@ public class TableDataController extends BasePrevNextController implements AutoC
       }
 
       if (pinVolController != null) {
-        pinVolController.setData(stage, Arrays.asList(game), false);
+        pinVolController.setData(stage, List.of(game), false);
       }
 
       if (tableDataTabCommentsController != null) {
@@ -1107,7 +1108,7 @@ public class TableDataController extends BasePrevNextController implements AutoC
       }
 
       if (tablesSidebarPlaylistsController != null) {
-        tablesSidebarPlaylistsController.setGames(Arrays.asList(game));
+        tablesSidebarPlaylistsController.setGames(List.of(game));
       }
 
       if (tableDataTabScriptOptionsController != null) {
@@ -1226,7 +1227,7 @@ public class TableDataController extends BasePrevNextController implements AutoC
 
       openVpsTableVersionBtn.setDisable(tableVersion == null);
       copyTableVersionBtn.setDisable(tableVersion == null);
-      fixVersionBtn.setDisable(tableVersion == null || StringUtils.equals(tableVersion.getVersion(), gameVersion.getText()));
+      fixVersionBtn.setDisable(tableVersion == null || Strings.CI.equals(tableVersion.getVersion(), gameVersion.getText()));
     }
 
     tableVersionsCombo.valueProperty().addListener(this);
@@ -1242,7 +1243,7 @@ public class TableDataController extends BasePrevNextController implements AutoC
       List<VpsTableVersion> tableFiles = new ArrayList<>(tableById.getTableFilesForFormat(tableFormat));
 
       if (!tableFiles.isEmpty()) {
-        tableFiles.add(0, null);
+        tableFiles.addFirst( null);
         tableVersionsCombo.setItems(FXCollections.observableList(tableFiles));
       }
     }
@@ -1269,7 +1270,7 @@ public class TableDataController extends BasePrevNextController implements AutoC
 
     openVpsTableVersionBtn.setDisable(newValue == null || newValue.getUrls().isEmpty());
     copyTableVersionBtn.setDisable(newValue == null);
-    fixVersionBtn.setDisable(mappedVersion == null || StringUtils.equals(gameVersion.getText(), game.getExtVersion()));
+    fixVersionBtn.setDisable(mappedVersion == null || Strings.CI.equals(gameVersion.getText(), game.getExtVersion()));
   }
 
   /**
